istio/apply/peer-authentication.yml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  namespace: istio-system
  name: peer-authentication
spec:
  mtls:
    mode: DISABLE
